--- a/thesis.bib
+++ b/thesis.bib
@@ -5,4 +5,9 @@
   howpublished = {\url{https://github.com/lotten/uci-thesis-latex/}}
 }
   
-
+@misc{dMdB20,
+  title = {{THE COMPLETED SDSS-IV EXTENDED BARYON OSCILLATION SPECTROSCOPIC SURVEY: BARYON ACOUSTIC OSCILLATIONS WITH LYMAN-α FORESTS}},
+  author = {du Mas des Bourboux, Helion, et. al.},
+  year = 2020,
+  howpublished = {\url{https://github.com/lotten/uci-thesis-latex/}}
+}
