Finished throughput section

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,13 +1,60 @@
-@misc{uci-thesis-latex,
-  title = {{LaTeX template for thesis and dissertation documents at UC Irvine}},
-  author = {Otten, Lars},
-  year = 2012,
-  howpublished = {\url{https://github.com/lotten/uci-thesis-latex/}}
-}
+@misc{Kirkby_21,
+  title = {desihub/specsim: August 2020 Release (Version v0.14)},
+  author = {Kirkby, David, and others},
+  year = {2021},
+  month = {February},
+  howpublished = {\url{http://doi.org/10.5281/zenodo.4566008/}}
+  }
   
-@misc{dMdB20,
-  title = {{THE COMPLETED SDSS-IV EXTENDED BARYON OSCILLATION SPECTROSCOPIC SURVEY: BARYON ACOUSTIC OSCILLATIONS WITH LYMAN-α FORESTS}},
-  author = {du Mas des Bourboux, Helion, et. al.},
-  year = 2020,
-  howpublished = {\url{https://github.com/lotten/uci-thesis-latex/}}
+@article{du_Mas_des_Bourboux_2020,
+   title={{The Completed SDSS-IV Extended Baryon Oscillation Spectroscopic Survey: Baryon Acoustic Oscillations with Ly-$\alpha$ forests}},
+   volume={901},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.3847/1538-4357/abb085},
+   DOI={10.3847/1538-4357/abb085},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={du Mas des Bourboux, Hélion and Rich, James and Font-Ribera, Andreu and de Sainte Agathe, Victoria and Farr, James and Etourneau, Thomas and Le Goff, Jean-Marc and Cuceu, Andrei and Balland, Christophe and Bautista, Julian E. and others},
+   year={2020},
+   month={Oct},
+   pages={153}
 }
+
+@article{Farr_2020,
+   title={LyaCoLoRe: synthetic datasets for current and future {L}yman-$\alpha$ forest {BAO} surveys},
+   volume={2020},
+   ISSN={1475-7516},
+   url={http://dx.doi.org/10.1088/1475-7516/2020/03/068},
+   DOI={10.1088/1475-7516/2020/03/068},
+   number={03},
+   journal={Journal of Cosmology and Astroparticle Physics},
+   publisher={IOP Publishing},
+   author={Farr, James and Font-Ribera, Andreu and Bourboux, Hélion du Mas des and Muñoz-Gutiérrez, Andrea and Sánchez, F. Javier and Pontzen, Andrew and González-Morales, Alma Xochitl and Alonso, David and Brooks, David and Doel, Peter and others},
+   year={2020},
+   month={Mar},
+   pages={068–068}
+}
+
+@unpublished{Chabanier_21,
+  author = {Chabanier, Solène, and others},
+  title = {{The Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: The Damped Lyman-$\alpha$ systems Catalog}}, 
+  note = {(in prep)},
+  year = {2021}
+}
+
+@article{Smee_2013,
+   title={{The Multi-Object, Fiber-Fed Spectrographs for the Sloan Digital Sky Survey and the Baryon Oscillation Spectroscopic Survey}},
+   volume={146},
+   ISSN={1538-3881},
+   url={http://dx.doi.org/10.1088/0004-6256/146/2/32},
+   DOI={10.1088/0004-6256/146/2/32},
+   number={2},
+   journal={The Astronomical Journal},
+   publisher={American Astronomical Society},
+   author={Smee, Stephen A. and Gunn, James E. and Uomoto, Alan and Roe, Natalie and Schlegel, David and Rockosi, Constance M. and Carr, Michael A. and Leger, French and Dawson, Kyle S. and Olmstead, Matthew D. and others},
+   year={2013},
+   month={Jul},
+   pages={32}
+}
+
